[package]
name = "tmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25"
rodio = { version = "0.17", features = ["minimp3"]}
fuzzy-matcher = "0.3.7"
symphonia = {version = "0.5.3", features = ["all-codecs"]}
mp3-duration = "0.1.10"
kanal = "0.1.0-pre8"

[patch.crates-io]
rodio = {path = "/Users/lunar/crates/rodio-0.17.1", features = ["minimp3"]}
